--- a/public/output.css
+++ b/public/output.css
@@ -559,17 +559,21 @@ video {
 
 .container {
   width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 0px;
+  padding-left: 0px;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 512px) {
   .container {
-    max-width: 640px;
+    max-width: 512px;
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 720px) {
   .container {
-    max-width: 768px;
+    max-width: 720px;
   }
 }
 
@@ -579,15 +583,15 @@ video {
   }
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1140px) {
   .container {
-    max-width: 1280px;
+    max-width: 1140px;
   }
 }
 
-@media (min-width: 1536px) {
+@media (min-width: 1320px) {
   .container {
-    max-width: 1536px;
+    max-width: 1320px;
   }
 }
 
@@ -661,12 +665,40 @@ video {
   left: -0.25rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
+.top-\[-400px\] {
+  top: -400px;
+}
+
+.left-2 {
+  left: 0.5rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
 .isolate {
   isolation: isolate;
 }
 
 .isolation-auto {
   isolation: auto;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
+.z-30 {
+  z-index: 30;
 }
 
 .float-right {
@@ -695,6 +727,10 @@ video {
 
 .clear-none {
   clear: none;
+}
+
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .mt-2 {
@@ -791,6 +827,34 @@ video {
 
 .hidden {
   display: none;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-\[677px\] {
+  width: 677px;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-\[648px\] {
+  width: 648px;
+}
+
+.w-\[310px\] {
+  width: 310px;
+}
+
+.w-\[312px\] {
+  width: 312px;
 }
 
 .flex-shrink {
@@ -1281,6 +1345,22 @@ video {
   justify-items: stretch;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -1558,8 +1638,16 @@ video {
   word-break: keep-all;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded {
   border-radius: 0.25rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
 }
 
 .rounded-t {
@@ -1612,16 +1700,16 @@ video {
   border-bottom-width: 1px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-t {
   border-top-width: 1px;
 }
 
 .border-r {
   border-right-width: 1px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
 }
 
 .border-l {
@@ -1650,6 +1738,29 @@ video {
 
 .border-none {
   border-style: none;
+}
+
+.border-transparent {
+  border-color: transparent;
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#20B486\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(32 180 134 / var(--tw-bg-opacity));
+}
+
+.bg-indigo-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
+}
+
+.bg-\[rgba\(233\2c 248\2c 243\2c 0\.7\)\] {
+  background-color: rgba(233,248,243,0.7);
 }
 
 .bg-\[rgb\(255\2c 0\2c 0\)\] {
@@ -1767,8 +1878,70 @@ video {
      object-fit: scale-down;
 }
 
-.pt-20 {
-  padding-top: 5rem;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-\[100px\] {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.pl-7 {
+  padding-left: 1.75rem;
+}
+
+.pt-\[150px\] {
+  padding-top: 150px;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
+.pt-\[201px\] {
+  padding-top: 201px;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pb-\[19px\] {
+  padding-bottom: 19px;
+}
+
+.pt-\[100px\] {
+  padding-top: 100px;
+}
+
+.pb-20 {
+  padding-bottom: 5rem;
 }
 
 .text-left {
@@ -1827,9 +2000,38 @@ video {
   vertical-align: super;
 }
 
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
+.font-public_sans {
+  font-family: Public Sans, sans-serif;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-\[56px\] {
+  font-size: 56px;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
+}
+
+.text-\[24px\] {
+  font-size: 24px;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.font-medium {
+  font-weight: 500;
 }
 
 .font-bold {
@@ -1904,9 +2106,60 @@ video {
   font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
 }
 
-.text-red-600 {
+.leading-6 {
+  line-height: 1.5rem;
+}
+
+.leading-\[72px\] {
+  line-height: 72px;
+}
+
+.leading-7 {
+  line-height: 1.75rem;
+}
+
+.leading-8 {
+  line-height: 2rem;
+}
+
+.text-\[\#20B486\] {
   --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
+  color: rgb(32 180 134 / var(--tw-text-opacity));
+}
+
+.text-\[\#6D737A\] {
+  --tw-text-opacity: 1;
+  color: rgb(109 115 122 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[\#06241B\] {
+  --tw-text-opacity: 1;
+  color: rgb(6 36 27 / var(--tw-text-opacity));
+}
+
+.text-green-600 {
+  --tw-text-opacity: 1;
+  color: rgb(22 163 74 / var(--tw-text-opacity));
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-\[\#363A3D\] {
+  --tw-text-opacity: 1;
+  color: rgb(54 58 61 / var(--tw-text-opacity));
+}
+
+.text-\[\#1B1D1F\] {
+  --tw-text-opacity: 1;
+  color: rgb(27 29 31 / var(--tw-text-opacity));
 }
 
 .text-\[\#336699\]\/\[\.35\] {
@@ -1962,6 +2215,10 @@ video {
 .subpixel-antialiased {
   -webkit-font-smoothing: auto;
   -moz-osx-font-smoothing: auto;
+}
+
+.opacity-0 {
+  opacity: 0;
 }
 
 .bg-blend-normal {
@@ -2096,6 +2353,18 @@ video {
   mix-blend-mode: plus-lighter;
 }
 
+.shadow-\[-4px_-4px_44px_rgba\(0\2c 0\2c 0\2c 0\.08\)\] {
+  --tw-shadow: -4px -4px 44px rgba(0,0,0,0.08);
+  --tw-shadow-colored: -4px -4px 44px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_3px_12px_rgba\(75\2c 75\2c 75\2c 0\.08\)\] {
+  --tw-shadow: 0px 3px 12px rgba(75,75,75,0.08);
+  --tw-shadow-colored: 0px 3px 12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -2210,6 +2479,12 @@ video {
           backdrop-filter: none;
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -2218,16 +2493,24 @@ video {
   transition-duration: 150ms;
 }
 
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
+}
+
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
-.ease-out {
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-}
-
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 .content-\[\'this-is-also-valid\]-weirdly-enough\'\] {
@@ -2235,8 +2518,22 @@ video {
   content: var(--tw-content);
 }
 
+.hover\:border-\[\#20B486\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(32 180 134 / var(--tw-border-opacity));
+}
+
+.hover\:bg-transparent:hover {
+  background-color: transparent;
+}
+
 .hover\:font-bold:hover {
   font-weight: 700;
+}
+
+.hover\:text-\[\#20B486\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(32 180 134 / var(--tw-text-opacity));
 }
 
 .before\:hover\:text-center:hover::before {
@@ -2260,17 +2557,21 @@ video {
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 0px;
+    padding-left: 0px;
   }
 
-  @media (min-width: 640px) {
+  @media (min-width: 512px) {
     .sm\:container {
-      max-width: 640px;
+      max-width: 512px;
     }
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: 720px) {
     .sm\:container {
-      max-width: 768px;
+      max-width: 720px;
     }
   }
 
@@ -2280,15 +2581,15 @@ video {
     }
   }
 
-  @media (min-width: 1280px) {
+  @media (min-width: 1140px) {
     .sm\:container {
-      max-width: 1280px;
+      max-width: 1140px;
     }
   }
 
-  @media (min-width: 1536px) {
+  @media (min-width: 1320px) {
     .sm\:container {
-      max-width: 1536px;
+      max-width: 1320px;
     }
   }
 
@@ -2297,10 +2598,55 @@ video {
   }
 }
 
+@media (min-width: 768px) {
+  .md\:static {
+    position: static;
+  }
+
+  .md\:z-auto {
+    z-index: auto;
+  }
+
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:w-auto {
+    width: auto;
+  }
+
+  .md\:items-center {
+    align-items: center;
+  }
+
+  .md\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .md\:pl-0 {
+    padding-left: 0px;
+  }
+
+  .md\:opacity-100 {
+    opacity: 1;
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   @media (min-width: 1024px) {
     .dark\:lg\:hover\:\[paint-order\:markers\]:hover {
       paint-order: markers;
     }
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .xl\:bg-transparent {
+    background-color: transparent;
   }
 }
